qualification section without responsive

--- a/src/App.css
+++ b/src/App.css
@@ -119,7 +119,7 @@ img {
   font-size: var(--h1-font-size);
   color: var(--title-color);
 }
-.section__Subtitle{
+.section__subtitle{
   display: block;
   font-size: var(--small-font-size);
   margin-bottom: 4rem;
@@ -127,7 +127,6 @@ img {
 .section__title,
 .section__subtitle{
   text-align: center;
-  display: block;
 }
 
 /* LAYOUT */
@@ -178,8 +177,14 @@ img {
 }
 /* For medium devices */
 @media screen and (max-width: 768px){
+  body{
+    margin: 0 0 var(--header-height);
+  }
   .section{
     padding: 2rem 0 4rem;
+  }
+  .section__subtitle{
+    margin-bottom: var(--mb-3);
   }
 
 }
