--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -49,7 +49,7 @@
   margin-bottom: var(--mb-3);
 }
 .home__img {
-  background: url(../../assets//profile.jpg);
+  background: url(../../assets//kartik-malvi.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
